@@ -4,7 +4,7 @@ pkgver=@version@
 pkgrel=@release@
 pkgdesc="Reimplementation of qmail functions in a library"
 arch=('i686' 'x86_64')
-url="https://github.com/mbhangui/libqmail"
+url="https://github.com/indimail/libqmail"
 license=('GPL2')
 groups=('base-devel')
 depends=('coreutils' 'findutils' 'sed' 'openssl' 'libsodium')
