@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: @email@
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), binutils, coreutils, libssl-dev, pkg-config, lsb-release
-Homepage: https://github.com/mbhangui/libqmail
+Homepage: https://github.com/indimail/libqmail
 
 Package: libqmail
 Section: libs
