@@ -1,7 +1,7 @@
 Format-Specification: http://svn.debian.org/wsvn/dep/web/deps/dep5.mdwn?op=file&rev=135
 Name: libqmail
 Maintainer: @email@
-Source: https://github.com/mbhangui/libqmail
+Source: https://github.com/indimail/libqmail
 
 Copyright: 2008-2011, Manvendra Bhangui <mbhangui@gmail.com>
 License: GPL-3+
