@@ -4,7 +4,7 @@ Binary: libqmail, libqmail-dev
 Architecture: any
 Version: @version@-@release@
 Maintainer: @email@
-Homepage: https://github.com/mbhangui/indimail-mta
+Homepage: https://github.com/indimail/indimail-mta
 Debtransform-Release: 1
 Debtransform-Files-Tar: debian.tar.gz
 Debtransform-Tar: libqmail-@version@.tar.gz
