@@ -30,7 +30,7 @@ License: GPL-2.0
 %else
 License: GPLv2
 %endif
-URL: https://github.com/mbhangui/libqmail
+URL: https://github.com/indimail/libqmail
 Source0: http://downloads.sourceforge.net/%{name}/%{name}-%{version}.tar.gz
 %global see_base For a description of IndiMail visit http://www.indimail.org
 %global mandir %{_prefix}/share/man
