@@ -7,6 +7,8 @@ Release @version@-@release@ Start 30/11/2023 End --/--/----
     characters
 - 22/12/2023
 02. str_spn.c: added str_spn() function
+- 31/12/2023
+03. moved repository to indimail org
 
 * Fri Sep 08 2023 12:40:38 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
 Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
